@@ -14,6 +14,8 @@ int main(int argc, char *argv[])
   register int i, n;
   double t;
   zVec3D p;
+  zVec3D tv;
+  FILE *fpp, *fpt;
 
   n = sizeof(cp)/sizeof(zVec3D);
   zNURBS3D1Alloc( &nurbs, n, 3 );
@@ -21,12 +23,16 @@ int main(int argc, char *argv[])
     zNURBS3D1SetCP( &nurbs, i, &cp[i] );
   zNURBS3D1SetWeight( &nurbs, 4, argc > 1 ? atof(argv[1]) : 1.0 );
   zNURBS3DSetSliceNum( &nurbs, 0, 100 );
+  fpp = fopen( "p", "w" );
+  fpt = fopen( "t", "w" );
   for( i=0; i<=nurbs.ns[1]; i++ ){
     t = zNURBS3D1KnotSlice( &nurbs, i );
-    if( zNURBS3D1Vec( &nurbs, t, &p ) ){
-      printf( "%f ",t );
-      zVec3DDataPrint( &p );
-      zEndl();
+    if( zNURBS3D1VecTan( &nurbs, 0, t, &p, &tv ) ){
+      zVec3DDataNLFPrint( fpp, &p );
+      zVec3DDataNLFPrint( fpt, &p );
+      zVec3DAddDRC( &p, &tv );
+      zVec3DDataNLFPrint( fpt, &p );
+      zFEndl( fpt );
     }
   }
   zNURBS3DDestroy( &nurbs );
